[2단계 - 로또(수동)] 루나(남민정) 미션 제출합니다. (#426)
* docs: 기능구현목록 추가

* feat: 로또 구입 금액 입력 추가

* feat: 로또 구입 금액 검증 로직 추가

* feat: 로또 당첨 번호 기능 추가

* docs: 진행사항 표시

* feat: 보너스 볼 입력 기능 추가

* feat: 로또 숫자 객체 구현

* feat: 상수 클래스 생성

* feat: 로또 객체 구현

* feat: 당첨로또 객체 구현

* feat(MainController): 구현할 기능 주석처리

* feat: Application 생성

* docs: 진행사항 표시

* style: 포맷팅에 맞게 정렬

* test: @SuppressWarnings("NonAsciiCharacters") 추가

* feat(Money): 돈 객체 기능 생성

* feat(LottoNumberGenerator): `Collections.shuffle()`을 활용해 로또 생성

* feat: getter 추가

* test(InputViewTest): 메서드 추가

* feat: 로또 티켓 생성/출력 기능 추가

* feat: 도메인과 검증로직 연결

* feat: 인풋 검증 클래스 구현

* feat: 보너스번호 일치여부 확인 메소드 추가

* feat: 보너스번호 일치여부 확인 메소드 추가

* feat(Rank): Enum 기능 추가

* style: 코드 리포맷

* feat: 결과 기능 구현

* feat(Rank): 로직 변경

* feat: getter 추가

* feat: 결과 출력 기능 구현

* feat(InputView): 검증 로직 추가

* feat(Money): getter 추가

* feat: 수익률 계산, 출력 기능 추가

* refactor: 상수화 구현 추가

* fix: OutputViewTest error fix

* refactor: 상수값 이동

* refactor(WinLottoNumbers): 보너스 번호 중복 검증 추가

* refactor: 프로그램이 에러로 끝나지 않도록 구현 수정

* refactor(LottoNumbers): countSameNumber 로직 수정

* refactor(LottoNumbers): get 메서드에서 불변 값으로 return 하게 수정

* refactor: WinLottoNumbers의 LottoNumbers 상속 제거

* refactor: WinLottoValidator validate 메서드 하나로 통일

* refactor: Cache 사용하는 방식으로 LottoNumber 수정

* refactor: Cache 사용하는 방식으로 LottoNumbers 수정

* test(MainControllerTest): 빈 테스트 삭제

* test: 테스트케이스 추가

* refactor(Money): 상수화, 불필요한 부분 삭제

* refactor(Money): 상수 이름 변경

* refactor(Validator): Validator 클래스 삭제 및 도메인에 기능 구현

* refactor: 로또 당첨 확인 로직 WinLottoNumber로 이동

* refactor: LottoNumbers -> LottoTicket 클래스명 변경

* refactor: printResult 메서드 일부 수정

* refactor(Separator): 상수 접근제어자, 메서드명 변경

* refactor(LottoNumber): 상수 추가

* refactor(Rank): 추가적인 설명용 주석 추가

* refactor(InputView): Scanner 중복 정리

* refactor(Rank): 주석 제거, DEFAULT 이름 변경

* refactor(WinLottoNumbers): validate 메서드 호출 위치 변경

* refac